--- a/setup.cfg
+++ b/setup.cfg
@@ -6,12 +6,12 @@
 name = nswcovid
 description = Get NSW Covid data from NSW Health
 author = Troy Kelly
-author-email = troy@troykelly.com
+author_email = troy@troykelly.com
 license = mit
-long-description = file: README.rst
-long-description-content-type = text/x-rst; charset=UTF-8
+long_description = file: README.rst
+long_description_content_type = text/x-rst; charset=UTF-8
 url = https://github.com/troykelly/python-nswcovid
-project-urls =
+project_urls =
     Documentation = https://github.com/troykelly/python-nswcovid/wiki
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
@@ -31,7 +31,7 @@ package_dir =
 setup_requires = pyscaffold>=3.2a0,<3.3a0
 # Add here dependencies of your project (semicolon/line-separated), e.g.
 # install_requires = numpy; scipy
-install_requires = backoff; requests; beautifulsoup4
+install_requires = backoff; requests; beautifulsoup4; lxml
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
@@ -50,6 +50,7 @@ exclude =
 testing =
     pytest
     pytest-cov
+    pytest-asyncio
 
 [options.entry_points]
 # Add here console scripts like:
@@ -73,13 +74,16 @@ extras = True
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
 addopts =
-    --cov nswcovid --cov-report term-missing
+    --cov nswcovid
+    --cov-report html
     --verbose
+    --log-cli-level=10
 norecursedirs =
     dist
     build
     .tox
 testpaths = tests
+log_cli = true
 
 [aliases]
 dists = bdist_wheel
