--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 ---
 github: troykelly
-custom: ["https://www.buymeacoffee.com/troykelly", buymeacoffee.com]
+custom: ["https://www.buymeacoffee.com/troykelly"]
